--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,14 @@
     <div id="form-container">
         <form>
             <label for="search-input">Search:</label>
-            <input type="text" id="search-input" name="search-input"/>
+            <input type="text" id="search-input" name="search-input" placeholder="enter city name"/>
             <button id="submit-button">Submit</button>
         </form>
+    </div>
+    <div id="output-container">
+        <h1 id="city-name"></h1>
+        <h2 id="full-location-name"></h2>
+        <h2 id="current-temperature"></h2>
     </div>
 </body>
 </html>
