getData is fully functional at this point, including error handling (may be good to provide some user feedback on the DOM if .catch block is triggered). At this point, just adding additional values to display from API, and styling required to make this not just look like default HTML

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
         <h1 id="city-name"></h1>
         <h2 id="full-location-name"></h2>
         <h2 id="current-temperature"></h2>
+        <span id="current-high"></span>
+        <span id="current-low"></span>
+        <span id="current-conditions"></h2>
     </div>
 </body>
 </html>
