trying and failing to implement a temperature degree conversion based on .checked state of the toggle slider - attached to a click event listener

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <div id="toggle-degrees">
                 <span id="celsius" class="degree-symbol">&#176;C</span>
                 <label class="switch">
-                    <input type="checkbox">
+                    <input type="checkbox" id="degree-checkbox"/>
                     <span class="slider round" id="toggle-slider"></span>
                 </label>
                 <span id="farenheit" class="degree-symbol">&#176;F</span>
